# influencehub

./: Readme.md
contract/: contract_test.sh
contract/contracts/influencehub/: Cargo.toml
contract/contracts/influencehub/src/: lib.rs  test.rs
contract/contracts/influencehub/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_complete_token_lifecycle.1.json  test_initialization.1.json  test_large_amounts.1.json  test_mint_by_non_owner_fails.1.json  test_mint_by_owner.1.json  test_multiple_mints.1.json  test_owner_can_mint_to_self.1.json  test_transfer_functionality.1.json  test_zero_amount_operations.1.json
contract/contracts/reputation_contract/: Cargo.toml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  index.css  main.tsx
frontend/src/hooks/: useFreighter.tsx
frontend/src/i18n/: README.md  index.ts  types.ts
frontend/src/soroban/: reputationClient.ts
frontend/src/state/: AuthContext.tsx  DataContext.tsx  FreighterContext.tsx  StellarWalletContext.tsx  mockData.ts  types.ts
frontend/src/types/: global.d.ts
frontend/src/ui/: BadgeCard.css  BadgeCard.tsx  LandingHeader.tsx  LanguageSelector.tsx  Layout.tsx  Primitives.tsx  PublicLayout.tsx  RequireAuth.tsx  StellarWalletButton.tsx  ToastContext.tsx  WalletConnection.tsx
frontend/src/views/: AdminDashboard.tsx  AmbassadorDashboard.tsx  ApprovalsPage.tsx  BadgesPage.tsx  CheckinPage.tsx  EventsPage.tsx  InfluencerDashboard.tsx  LandingPage.tsx  LoginPage.tsx  MissionSubmissionsPage.tsx  MissionsPage.tsx  (+3 more)
(+15 files in other folders)
